bk_ida/gccida/g2/push_range_stack
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/push_range_stack/src/c-typeck.c:6169:6: error: use of undeclared identifier 'constructor_range_stack_0'; did you mean 'constructor_range_stack'?
v3 = constructor_range_stack_0; 
     ^~~~~~~~~~~~~~~~~~~~~~~~~
     constructor_range_stack
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/push_range_stack/src/c-typeck.c:5036:33: note: 'constructor_range_stack' declared here
struct constructor_range_stack *constructor_range_stack;
                                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/push_range_stack/src/c-typeck.c:6176:6: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
v5 = constructor_stack_0; 
     ^~~~~~~~~~~~~~~~~~~
     constructor_stack
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/push_range_stack/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/push_range_stack/src/c-typeck.c:6181:1: error: use of undeclared identifier 'constructor_range_stack_0'; did you mean 'constructor_range_stack'?
constructor_range_stack_0 = v1; 
^~~~~~~~~~~~~~~~~~~~~~~~~
constructor_range_stack
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/push_range_stack/src/c-typeck.c:5036:33: note: 'constructor_range_stack' declared here
struct constructor_range_stack *constructor_range_stack;
                                ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/push_range_stack/src/obj/c-typeck.o] Error 1
